--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,7 +19,7 @@
 body {
   font-family: "Hanken Grotesk", sans-serif;
   background-color: #F8F8F8;
-  max-width: 1800px;
+  /* max-width: 1800px; */
   margin-left: auto;
   margin-right: auto;
 }
