--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap');
 
 @font-face {
   font-family: 'Benzin';
@@ -8,6 +9,22 @@
   font-weight: normal;
   font-style: normal;
   font-display: swap;
+}
+
+.auth,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 .dashboard,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Schibsted Grotesk", sans-serif !important
 }
 
 @font-face {
@@ -21,7 +38,7 @@
 @import "tailwindcss";
 
 @theme {
-  --color-primary: #0095FF;
+  --color-primary: #1969FE;
   --color-gray: #E5E5E5;
   --color-bg: #FCFCFC;
   --color-bg-light: #F4F4F4;
