--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap'); */
 
 @font-face {
   font-family: 'Benzin';
@@ -11,7 +11,7 @@
   font-display: swap;
 }
 
-.auth,
+/* .auth,
 h1,
 h2,
 h3,
@@ -28,7 +28,7 @@ h4,
 h5,
 h6 {
   font-family: "Schibsted Grotesk", sans-serif !important
-}
+} */
 
 @font-face {
   font-family: 'BlackHanSans';
